fix: navigation spacing
fixed inconsistent spacing of navigation bar between spaces by setting a consistent width value for each page component

--- a/styles/JobBoard.module.css
+++ b/styles/JobBoard.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 0 56px;
-  max-width: 1300px;
+  width: 75vw;
   min-height: 95vh;
   display: flex;
   flex-direction: column;
