--- a/styles/SinglePage.module.css
+++ b/styles/SinglePage.module.css
@@ -1,6 +1,6 @@
 .container {
   margin: 0 56px;
-  max-width: 1300px;
+  width: 75vw;
   min-height: 95vh;
   border: 2px solid #422800;
   padding: 16px 40px 16px 24px;
